--- a/public/src/css/dashboard.css
+++ b/public/src/css/dashboard.css
@@ -79,11 +79,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* background-image: linear-gradient(
-    145deg,
-    var(--accent-color-1) 0%,
-    #764ba2 100%
-  ); */
   position: relative;
 }
 
@@ -104,6 +99,7 @@ body::after {
       rgba(35, 33, 36, 0.6)
     ),
     url('/img/bgs/bg12.svg');
+  backdrop-filter: blur(40px);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -347,6 +343,7 @@ a:visited {
   border-radius: 2rem;
   text-align: center;
   box-shadow: var(--shadow-medium);
+  border: 0.7px solid rgba(255, 255, 255, 0.2);
 }
 
 .activity-box {
@@ -382,6 +379,7 @@ a:visited {
   margin: 0 auto;
   background-color: var(--bg-color-1);
   padding: 2rem 4rem;
+  border: 0.7px solid rgba(255, 255, 255, 0.2);
   border-radius: var(--default-border-radius);
   box-shadow: var(--shadow-medium);
   font-weight: 600;
@@ -1406,6 +1404,7 @@ circle:nth-of-type(4) {
   border-radius: 1rem;
   padding: 1.5rem;
   margin-bottom: 2rem;
+  border: 2px solid rgba(255, 255, 255, 0.2);
 }
 
 .file-details,
@@ -1589,6 +1588,7 @@ a:visited {
   display: inline-block;
   background-color: var(--bg-color-2);
   padding: 2rem 3rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: var(--default-border-radius);
   box-shadow: var(--shadow-light);
 }
@@ -1597,11 +1597,13 @@ a:visited {
   display: inline-block;
   background-color: var(--bg-color-6);
   padding: 2rem 3rem;
+  border: 1px solid rgba(255, 255, 255, 0.2);
   border-radius: var(--default-border-radius);
   box-shadow: var(--shadow-light);
 }
 
 .welcome-message-box--accent {
+  border: 1px solid rgba(255, 255, 255, 0.2);
   background-color: var(--accent-color-1);
 }
 
