--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -260,7 +260,7 @@ a.nav__link:hover {
   justify-content: center;
   align-items: center;
   padding: 1.6rem 1.3rem;
-  border: 2.2px solid rgba(255, 255, 255, 0.2);
+  border: 2.3px solid rgba(255, 255, 255, 0.2);
   border-radius: 5rem;
   margin-left: var(--margin-small);
   box-shadow: 2rem 4rem 6rem rgba(0, 0, 0, 0.35);
@@ -715,15 +715,17 @@ input {
   letter-spacing: 0.5rem;
   padding-left: 1.5rem;
   padding-right: 1rem;
+  border: 2.2px solid rgba(255, 255, 255, 0.2);
+  border-radius: 1rem;
   transition: all 0.3s ease;
 }
 
 .heading-secondary--animated:hover {
   color: var(--accent-color-1);
   background-color: var(--bg-color-1);
-  border-radius: var(--default-border-radius);
+  border-radius: 1rem;
   transform: skew(13deg, 3deg) scale(1.03);
-  box-shadow: var(--shadow-dark);
+  box-shadow: var(--shadow-medium);
 }
 
 .heading-tertiary {
