Refactor Admin Navbar

--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -35,8 +35,7 @@
             </div>
 
             <div class="main-menu">
-              <h4>Main Menu</h4>
-
+              <h4>Manage Files</h4>
               <div class="nav-link" id="manage-videos-btn">
                 <i class="bx bxs-videos"></i>
                 <p class="link">Videos</p>
@@ -52,6 +51,7 @@
                 <p class="link">Documents</p>
               </div>
 
+              <h4>Users & Admins</h4>
               <div class="nav-link" id="manage-users-btn">
                 <i class="bx bx-user"></i>
                 <p class="link">Users</p>
