--- a/public/src/css/dashboard.css
+++ b/public/src/css/dashboard.css
@@ -6,7 +6,6 @@
   --bg-color-3: #2a2c43;
   --bg-color-4: #242834;
   --bg-color-5: #232124;
-  --bg-color-6: #1a1b21;
 
   /* --font-color-1: #d0cae5; */
   --font-color-1: #fafbfc;
@@ -83,12 +82,13 @@ body {
   justify-content: center;
   align-items: center;
   position: relative;
+  background-image: linear-gradient(200.42deg, #844ffc 13.57%, #491eb8 98.35%);
 }
 
 body::after {
   content: '';
   position: absolute;
-  z-index: -1;
+  z-index: -15;
   pointer-events: none;
   width: 100%;
   height: 100%;
@@ -382,7 +382,7 @@ a:visited {
   font-size: 1.5rem;
   display: inline-block;
   margin: 0 auto;
-  background-color: var(--bg-color-6);
+  background-color: var(--bg-color-5);
   padding: 2rem 4rem;
   border: 0.7px solid rgba(255, 255, 255, 0.2);
   border-radius: var(--default-border-radius);
