--- a/public/src/css/dashboard.css
+++ b/public/src/css/dashboard.css
@@ -107,6 +107,24 @@ body::after {
   background-repeat: no-repeat;
 }
 
+body::before {
+  content: '';
+  position: absolute;
+  z-index: -15;
+  pointer-events: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  opacity: 0.04;
+  background-image: url('/img/bgs/bg18.svg');
+  backdrop-filter: blur(40px);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 h1,
 h2,
 h3,
