--- a/public/src/css/dashboard.css
+++ b/public/src/css/dashboard.css
@@ -102,7 +102,6 @@ body::after {
       rgba(35, 33, 36, 0.6)
     ),
     url('/img/bgs/bg18.svg');
-  backdrop-filter: blur(40px);
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -110,7 +109,7 @@ body::after {
 body::before {
   content: '';
   position: absolute;
-  z-index: -10;
+  z-index: -5;
   pointer-events: none;
   width: 100%;
   height: 100%;
@@ -118,8 +117,9 @@ body::before {
   left: 0;
   bottom: 0;
   right: 0;
-  opacity: 0.04;
-  background-image: url('/img/bgs/bg18.svg');
+  opacity: 0.05;
+  background-image: url('/img/bgs/bg19.svg');
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
 }
