--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -119,7 +119,7 @@
                 <% } else { %>
                 <div class="details">
                   <% recentFiles.forEach(file => { %>
-                  <p><%= file.uploaderinfo.email %> • <%= file.fileSize %></p>
+                  <p><%= file.uploaderInfo.email %> • <%= file.fileSize %></p>
                   <% }) %>
                 </div>
                 <% } %>
