--- a/public/src/css/download.css
+++ b/public/src/css/download.css
@@ -53,6 +53,8 @@ body {
   color: var(--font-color-1);
   min-height: 100vh;
   line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 
   display: flex;
   align-items: center;
