--- a/public/src/css/errors.css
+++ b/public/src/css/errors.css
@@ -65,11 +65,8 @@ body {
   color: var(--font-color-1);
   font-weight: 400;
   line-height: 1.5;
-  /* background-image: linear-gradient(
-    to right bottom,
-    rgba(43, 43, 61, 0.9),
-    rgba(35, 30, 54, 0.8)
-  ); */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 h1,
