--- a/public/src/css/styles.css
+++ b/public/src/css/styles.css
@@ -458,8 +458,10 @@ a.nav__link:hover {
   height: 100%;
   background-image: linear-gradient(
       to right bottom,
-      rgba(43, 43, 61, 0.95),
-      rgba(35, 30, 54, 0.95)
+      /* rgba(43, 43, 61, 0.95),
+      rgba(35, 30, 54, 0.95) */
+        rgba(38, 39, 46, 0.96),
+      rgba(43, 43, 61, 0.97)
     ),
     url('/img/bgs/bg19.svg');
   background-size: cover;
@@ -560,7 +562,7 @@ a.nav__link:hover {
   margin-bottom: 2rem;
   padding: 0 1.5rem;
   border-radius: 10rem;
-  border: 2.5px solid var(--accent-color-1);
+  border: 2.4px solid rgba(255, 255, 255, 0.2);
 }
 
 .input--field i {
