Add Logout From All Devices functionality

--- a/public/src/css/dashboard.css
+++ b/public/src/css/dashboard.css
@@ -1054,6 +1054,10 @@ a:visited {
   cursor: pointer;
 }
 
+.logout-all {
+  margin-top: 5rem;
+}
+
 /* --------------------  Modal Container -------------------  */
 .modal__wrapper {
   position: fixed;
