Add IP Address field on dashboard

--- a/views/client/dashboard.ejs
+++ b/views/client/dashboard.ejs
@@ -107,8 +107,8 @@
               <div class="details">
                 <p>Username • <%= username %></p>
                 <p>Email • <%= email %></p>
-                <p>Craeted At • <%= createdAt %></p>
-                <p>Role • <%= role %></p>
+                <p>Account Activated • <%= createdAt %></p>
+                <p>IP Address • <%= ip %></p>
               </div>
             </div>
           </div>
